--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-    "bootstrap": "^5.3.4",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
